--- a/index.Html
+++ b/index.Html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>I'm Learning git</h1>
+    <p>Today i will understand git in depth by practicing git </p>
 </body>
 </html>
